fix warnings and minor refactoring of slicing plugins